--- a/dev/pug/template/partials/scripts.pug
+++ b/dev/pug/template/partials/scripts.pug
@@ -7,7 +7,7 @@ script(type='text/javascript').
 
 // Google map
 script(src='static/js/custom-google-map.js')
-script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDNrS-arF3VN2kCjg47CZajXHHWTr9R3pA&callback=initMap&language=ru&region=RU', async='', defer='')
+script(src='https://maps.googleapis.com/maps/api/js?key=APIKEY&callback=initMap&language=ru&region=RU', async='', defer='')
 // Sly
 script(src='static/js/sly.min.js')
 // ScrollMagic
